@@ -1,7 +1,13 @@
 package com.sanepidcenter.service;
 
 import com.sanepidcenter.model.Inspection;
+import com.sanepidcenter.model.InspectionType;
+import com.sanepidcenter.model.Organization;
+import com.sanepidcenter.model.Profile;
 import com.sanepidcenter.repository.InspectionRepository;
+import com.sanepidcenter.repository.InspectionTypeRepository;
+import com.sanepidcenter.repository.OrganizationRepository;
+import com.sanepidcenter.repository.ProfileRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -10,7 +16,6 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -19,113 +24,127 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
-/**
- * Unit tests for InspectionService.
- */
 @ExtendWith(MockitoExtension.class)
 class InspectionServiceTest {
 
     @Mock
     private InspectionRepository inspectionRepository;
+    @Mock
+    private OrganizationRepository organizationRepository;
+    @Mock
+    private InspectionTypeRepository inspectionTypeRepository;
+    @Mock
+    private ProfileRepository profileRepository;
 
     @InjectMocks
     private InspectionService inspectionService;
 
     private Inspection testInspection;
+    private Organization organization;
+    private InspectionType inspectionType;
+    private Profile inspector;
 
     @BeforeEach
     void setUp() {
-        testInspection = new Inspection();
-        testInspection.setId(UUID.randomUUID().toString());
-        testInspection.setStatus("planned");
-        testInspection.setResult("pending");
-        testInspection.setScheduledDate(LocalDate.now().plusDays(7));
+        organization = Organization.builder()
+                .id(UUID.randomUUID())
+                .name("Org")
+                .shortName("O")
+                .address("Addr")
+                .city("Moscow")
+                .directorName("Dir")
+                .phone("+79990000000")
+                .email("org@test.local")
+                .employeeCount(10)
+                .riskCategory("medium")
+                .notes("notes")
+                .build();
+
+        inspectionType = new InspectionType();
+        inspectionType.setId(1);
+        inspectionType.setName("Plan");
+
+        inspector = Profile.builder()
+                .id(UUID.randomUUID())
+                .username("insp")
+                .password("pwd")
+                .fullName("Inspector")
+                .role("ROLE_INSPECTOR")
+                .phone("+79990000000")
+                .position("Inspector")
+                .isActive(true)
+                .build();
+
+        testInspection = Inspection.builder()
+                .id(UUID.randomUUID())
+                .organization(organization)
+                .type(inspectionType)
+                .inspector(inspector)
+                .scheduledDate(LocalDate.now().plusDays(7))
+                .status("planned")
+                .result("pending")
+                .findingsSummary("none")
+                .recommendations("none")
+                .build();
     }
 
     @Test
     void getAllInspections_ShouldReturnList() {
-        // Given
-        List<Inspection> inspections = Arrays.asList(testInspection);
-        when(inspectionRepository.findAll()).thenReturn(inspections);
+        when(inspectionRepository.findAllWithDetails()).thenReturn(List.of(testInspection));
 
-        // When
         List<Inspection> result = inspectionService.getAllInspections();
 
-        // Then
-        assertNotNull(result);
         assertEquals(1, result.size());
-        verify(inspectionRepository, times(1)).findAll();
+        verify(inspectionRepository).findAllWithDetails();
     }
 
     @Test
     void getInspectionById_WhenExists_ShouldReturnInspection() {
-        // Given
-        String id = testInspection.getId();
+        UUID id = testInspection.getId();
         when(inspectionRepository.findByIdWithDetails(id)).thenReturn(Optional.of(testInspection));
 
-        // When
         Optional<Inspection> result = inspectionService.getInspectionById(id);
 
-        // Then
         assertTrue(result.isPresent());
         assertEquals("planned", result.get().getStatus());
-        verify(inspectionRepository, times(1)).findByIdWithDetails(id);
     }
 
     @Test
-    void createInspection_ShouldSaveAndReturn() {
-        // Given
+    void createInspection_ShouldAttachReferencesAndSave() {
+        when(organizationRepository.findById(organization.getId())).thenReturn(Optional.of(organization));
+        when(inspectionTypeRepository.findById(inspectionType.getId())).thenReturn(Optional.of(inspectionType));
+        when(profileRepository.findById(inspector.getId())).thenReturn(Optional.of(inspector));
         when(inspectionRepository.save(any(Inspection.class))).thenReturn(testInspection);
 
-        // When
         Inspection result = inspectionService.createInspection(testInspection);
 
-        // Then
         assertNotNull(result);
-        assertEquals("planned", result.getStatus());
-        verify(inspectionRepository, times(1)).save(testInspection);
+        verify(inspectionRepository).save(testInspection);
     }
 
     @Test
-    void deleteInspection_ShouldCallRepository() {
-        // Given
-        String id = testInspection.getId();
+    void createInspection_Completed_ShouldSetEndDate() {
+        testInspection.setStatus("completed");
+        testInspection.setResult("satisfactory");
 
-        // When
-        inspectionService.deleteInspection(id);
+        when(organizationRepository.findById(organization.getId())).thenReturn(Optional.of(organization));
+        when(inspectionTypeRepository.findById(inspectionType.getId())).thenReturn(Optional.of(inspectionType));
+        when(profileRepository.findById(inspector.getId())).thenReturn(Optional.of(inspector));
+        when(inspectionRepository.save(any(Inspection.class))).thenAnswer(i -> i.getArgument(0));
 
-        // Then
-        verify(inspectionRepository, times(1)).deleteById(id);
+        Inspection result = inspectionService.createInspection(testInspection);
+
+        assertEquals("completed", result.getStatus());
+        assertNotNull(result.getEndDate());
     }
 
     @Test
     void getPlannedInspections_ShouldReturnOnlyPlanned() {
-        // Given
-        when(inspectionRepository.findByStatusOrderByScheduledDateDesc("planned"))
-                .thenReturn(Arrays.asList(testInspection));
+        when(inspectionRepository.findByStatusOrderByScheduledDateDesc("planned")).thenReturn(List.of(testInspection));
 
-        // When
         List<Inspection> result = inspectionService.getPlannedInspections();
 
-        // Then
-        assertNotNull(result);
         assertEquals(1, result.size());
         assertEquals("planned", result.get(0).getStatus());
-        verify(inspectionRepository, times(1)).findByStatusOrderByScheduledDateDesc("planned");
-    }
-
-    @Test
-    void getInspectionsByStatus_ShouldReturnMatching() {
-        // Given
-        String status = "completed";
-        when(inspectionRepository.findByStatus(status))
-                .thenReturn(Arrays.asList(testInspection));
-
-        // When
-        List<Inspection> result = inspectionService.getInspectionsByStatus(status);
-
-        // Then
-        assertNotNull(result);
-        verify(inspectionRepository, times(1)).findByStatus(status);
     }
 }
